c_api/bindings.rs

extern "C" {
    pub fn recognizer_create_translation_recognizer_from_config(
        phreco: *mut SPXRECOHANDLE,
        hspeechconfig: SPXSPEECHCONFIGHANDLE,
        haudioInput: SPXAUDIOCONFIGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_create_intent_recognizer_from_config(
        phreco: *mut SPXRECOHANDLE,
        hspeechconfig: SPXSPEECHCONFIGHANDLE,
        haudioInput: SPXAUDIOCONFIGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_handle_is_valid(hreco: SPXRECOHANDLE) -> bool;
}
extern "C" {
    pub fn recognizer_handle_release(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    pub fn recognizer_async_handle_is_valid(hasync: SPXASYNCHANDLE) -> bool;
}
extern "C" {
    pub fn recognizer_async_handle_release(hasync: SPXASYNCHANDLE) -> SPXHR;
}
extern "C" {
    pub fn recognizer_result_handle_is_valid(hresult: SPXRESULTHANDLE) -> bool;
}
extern "C" {
    pub fn recognizer_result_handle_release(hresult: SPXRESULTHANDLE) -> SPXHR;
}
extern "C" {
    pub fn recognizer_event_handle_is_valid(hevent: SPXEVENTHANDLE) -> bool;
}
extern "C" {
    pub fn recognizer_event_handle_release(hevent: SPXEVENTHANDLE) -> SPXHR;
}
extern "C" {
    pub fn recognizer_enable(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    pub fn recognizer_disable(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    pub fn recognizer_is_enabled(
        hreco: SPXRECOHANDLE,
        pfEnabled: *mut bool,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_get_property_bag(
        hreco: SPXRECOHANDLE,
        hpropbag: *mut SPXPROPERTYBAGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_recognize_once(
        hreco: SPXRECOHANDLE,
        phresult: *mut SPXRESULTHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_recognize_once_async(
        hreco: SPXRECOHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_recognize_once_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
        phresult: *mut SPXRESULTHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_start_continuous_recognition(
        hreco: SPXRECOHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_start_continuous_recognition_async(
        hreco: SPXRECOHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_start_continuous_recognition_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_stop_continuous_recognition(
        hreco: SPXRECOHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_stop_continuous_recognition_async(
        hreco: SPXRECOHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_stop_continuous_recognition_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_start_keyword_recognition(
        hreco: SPXRECOHANDLE,
        hkeyword: SPXKEYWORDHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_start_keyword_recognition_async(
        hreco: SPXRECOHANDLE,
        hkeyword: SPXKEYWORDHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_start_keyword_recognition_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_stop_keyword_recognition(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    pub fn recognizer_stop_keyword_recognition_async(
        hreco: SPXRECOHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_stop_keyword_recognition_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
    ) -> SPXHR;
}
pub type PSESSION_CALLBACK_FUNC = ::std::option::Option<
    unsafe extern "C" fn(
        hreco: SPXRECOHANDLE,
        hevent: SPXEVENTHANDLE,
        pvContext: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    pub fn recognizer_session_started_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PSESSION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_session_stopped_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PSESSION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
pub type PRECOGNITION_CALLBACK_FUNC = ::std::option::Option<
    unsafe extern "C" fn(
        hreco: SPXRECOHANDLE,
        hevent: SPXEVENTHANDLE,
        pvContext: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    pub fn recognizer_recognizing_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_recognized_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_canceled_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_speech_start_detected_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_speech_end_detected_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_session_event_get_session_id(
        hevent: SPXEVENTHANDLE,
        pszSessionId: *mut ::std::os::raw::c_char,
        cchSessionId: u32,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_recognition_event_get_offset(
        hevent: SPXEVENTHANDLE,
        pszOffset: *mut u64,
    ) -> SPXHR;
}
extern "C" {
    pub fn recognizer_recognition_event_get_result(
        hevent: SPXEVENTHANDLE,
        phresult: *mut SPXRESULTHANDLE,
    ) -> SPXHR;
}
pub const Result_Reason_ResultReason_NoMatch: Result_Reason = 0;
pub const Result_Reason_ResultReason_Canceled: Result_Reason = 1;
pub const Result_Reason_ResultReason_RecognizingSpeech: Result_Reason = 2;
pub const Result_Reason_ResultReason_RecognizedSpeech: Result_Reason = 3;
pub const Result_Reason_ResultReason_RecognizingIntent: Result_Reason = 4;
pub const Result_Reason_ResultReason_RecognizedIntent: Result_Reason = 5;
pub const Result_Reason_ResultReason_TranslatingSpeech: Result_Reason = 6;
pub const Result_Reason_ResultReason_TranslatedSpeech: Result_Reason = 7;
pub const Result_Reason_ResultReason_SynthesizingAudio: Result_Reason = 8;
pub const Result_Reason_ResultReason_SynthesizingAudioComplete: Result_Reason =
    9;
pub type Result_Reason = u32;
pub const Result_CancellationReason_CancellationReason_Error:
    Result_CancellationReason = 1;
pub const Result_CancellationReason_CancellationReason_EndOfStream:
    Result_CancellationReason = 2;
pub type Result_CancellationReason = u32;
pub const Result_CancellationErrorCode_CancellationErrorCode_NoError:
    Result_CancellationErrorCode = 0;
pub const Result_CancellationErrorCode_CancellationErrorCode_AuthenticationFailure : Result_CancellationErrorCode = 1 ;
pub const Result_CancellationErrorCode_CancellationErrorCode_BadRequest:
    Result_CancellationErrorCode = 2;
pub const Result_CancellationErrorCode_CancellationErrorCode_TooManyRequests:
    Result_CancellationErrorCode = 3;
pub const Result_CancellationErrorCode_CancellationErrorCode_Forbidden:
    Result_CancellationErrorCode = 4;
pub const Result_CancellationErrorCode_CancellationErrorCode_ConnectionFailure : Result_CancellationErrorCode = 5 ;
pub const Result_CancellationErrorCode_CancellationErrorCode_ServiceTimeout:
    Result_CancellationErrorCode = 6;
pub const Result_CancellationErrorCode_CancellationErrorCode_ServiceError:
    Result_CancellationErrorCode = 7;
pub const Result_CancellationErrorCode_CancellationErrorCode_ServiceUnavailable : Result_CancellationErrorCode = 8 ;
pub const Result_CancellationErrorCode_CancellationErrorCode_RuntimeError:
    Result_CancellationErrorCode = 9;
pub type Result_CancellationErrorCode = u32;
pub const Result_NoMatchReason_NoMatchReason_NotRecognized:
    Result_NoMatchReason = 1;
pub const Result_NoMatchReason_NoMatchReason_InitialSilenceTimeout:
    Result_NoMatchReason = 2;
pub const Result_NoMatchReason_NoMatchReason_InitialBabbleTimeout:
    Result_NoMatchReason = 3;
pub type Result_NoMatchReason = u32;
extern "C" {
    pub fn result_get_reason(
        hresult: SPXRESULTHANDLE,
        reason: *mut Result_Reason,
    ) -> SPXHR;
}
extern "C" {
    pub fn result_get_reason_canceled(
        hresult: SPXRESULTHANDLE,
        reason: *mut Result_CancellationReason,
    ) -> SPXHR;
}
extern "C" {
    pub fn result_get_canceled_error_code(
        hresult: SPXRESULTHANDLE,
        errorCode: *mut Result_CancellationErrorCode,
    ) -> SPXHR;
}
extern "C" {
    pub fn result_get_no_match_reason(
        hresult: SPXRESULTHANDLE,
        reason: *mut Result_NoMatchReason,
    ) -> SPXHR;
}
extern "C" {
    pub fn result_get_result_id(
        hresult: SPXRESULTHANDLE,
        pszResultId: *mut ::std::os::raw::c_char,
        cchResultId: u32,
    ) -> SPXHR;
}
extern "C" {
    pub fn result_get_text(
        hresult: SPXRESULTHANDLE,
        pszText: *mut ::std::os::raw::c_char,
        cchText: u32,
    ) -> SPXHR;
}
extern "C" {
    pub fn result_get_offset(
        hresult: SPXRESULTHANDLE,
        offset: *mut u64,
    ) -> SPXHR;
}
extern "C" {
    pub fn result_get_duration(
        hresult: SPXRESULTHANDLE,
        duration: *mut u64,
    ) -> SPXHR;
}
extern "C" {
    pub fn result_get_property_bag(
        hresult: SPXRESULTHANDLE,
        hpropbag: *mut SPXPROPERTYBAGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn session_from_recognizer(
        hreco: SPXRECOHANDLE,
        phsession: *mut SPXSESSIONHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn session_handle_is_valid(hsession: SPXSESSIONHANDLE) -> bool;
}
extern "C" {
    pub fn session_handle_release(hsession: SPXSESSIONHANDLE) -> SPXHR;
}
extern "C" {
    pub fn session_get_property_bag(
        hsession: SPXSESSIONHANDLE,
        hpropbag: *mut SPXPROPERTYBAGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn connection_from_recognizer(
        recognizerHandle: SPXRECOHANDLE,
        connectionHandle: *mut SPXCONNECTIONHANDLE,
    ) -> SPXHR;
}
extern "C" {
    pub fn connection_handle_is_valid(handle: SPXCONNECTIONHANDLE) -> bool;
}
extern "C" {
    pub fn connection_handle_release(handle: SPXCONNECTIONHANDLE) -> SPXHR;
}
extern "C" {
    pub fn connection_open(
        handle: SPXCONNECTIONHANDLE,
        forContinuousRecognition: bool,
    ) -> SPXHR;
}
extern "C" {
    pub fn connection_close(handle: SPXCONNECTIONHANDLE) -> SPXHR;
}
pub type CONNECTION_CALLBACK_FUNC = ::std::option::Option<
    unsafe extern "C" fn(
        event: SPXEVENTHANDLE,
        context: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    pub fn connection_connected_set_callback(
        connection: SPXCONNECTIONHANDLE,
        callback: CONNECTION_CALLBACK_FUNC,
        context: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    pub fn connection_disconnected_set_callback(
        connection: SPXCONNECTIONHANDLE,
        Callback: CONNECTION_CALLBACK_FUNC,
        context: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
pub const SpeechOutputFormat_SpeechOutputFormat_Simple: SpeechOutputFormat = 0;
pub const SpeechOutputFormat_SpeechOutputFormat_Detailed: SpeechOutputFormat =
    1;
pub type SpeechOutputFormat = u32;
extern "C" {
    pub fn speech_config_is_handle_valid(
        hconfig: SPXSPEECHCONFIGHANDLE,
    ) -> bool;
}
